--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav {
 }
 
 .nav-logo {
-    height: 3.5rem;
+    height: 3.25rem;
     justify-content:center;  
     margin-top: auto;
     margin-bottom: 0.75rem;
@@ -347,9 +347,10 @@ section {
 .details-container {
     padding: 1.5rem;
     flex: 1;
-    background: white;
     border-radius: 2rem;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .section-container {
@@ -422,9 +423,20 @@ article .icon {
     border-radius: 2rem;
     width: 90%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+}
+
+.overlay-img {
+    border-radius: 2rem;
+    width: 100%;
+    height: auto;
 }
 
 .project-title {
+    font-weight: 600;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
     color: black;
 }
@@ -526,7 +538,7 @@ footer p {
   bottom: 0;
   left: 0;
   right: 0;
-  height: 100%;
+  height: 99%;
   width: 100%;
   opacity: 0;
   transition: .5s ease;
@@ -572,12 +584,11 @@ footer p {
 }
 
 .project-container {
-    flex-grow: 1;
     margin-top: auto;
 }
 
 .project-description {
-    margin-bottom: auto;
+    margin-bottom: 1rem;;
 }
 
 .slideshow-project {
